--- a/light-it-up/index.html
+++ b/light-it-up/index.html
@@ -10,7 +10,7 @@
         <script src="./scripts/main.js" defer></script>
 	</head>
 	<body>
-        <div class="title">Flip the switches and make the bulbs glow</div>
+        <div class="title">Flip the switches and make the bulbs glow, use full screen if necessary</div>
 		<div class="container">
             <!-- width="1008" height="528.4" -->
             <svg class="circuit" fill="none" viewBox="0 0 2520 1321">
